[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "Ashes.live"
description = "API backend for a fan-developed deckbuilder and community website for the card game Ashes Reborn"
version = "2.0.0a1"
license = "ISC"
readme = "README.md"
authors = ["Ian Beck <ian@onecrayon.com>"]

[tool.poetry.dependencies]
python = "^3.10.5"
fastapi = "^0.78.0"
gunicorn = "^20.0.4"
sqlalchemy = "~1.3.23"
alembic = "^1.4.2"
psycopg2 = "^2.8.5"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-multipart = "^0.0.5"
email-validator = "^1.1.1"
sendgrid = "^6.4.6"
# Install uvicorn with the pieces from uvicorn[standard] that we will actually use
uvicorn = "^0.18.2"
uvloop = "^0.16.0"
httptools = "^0.4.0"

[tool.poetry.dev-dependencies]
# These are used by the test suite
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
sqlalchemy-utils = "^0.38.2"
freezegun = "^1.1.0"
# These are used by `make format`
black = "^22.6.0"
isort = "^5.4.2"
# These are used by VSCode
pylint = "^2.6.0"
rope = "^1.2.0"

[tool.isort]
profile = "black"
multi_line_output = 3
