[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "Ashes.live"
description = "API backend for a fan-developed deckbuilder and community website for the card game Ashes Reborn"
version = "2.0.0a1"
license = "ISC"
readme = "README.md"
authors = ["Ian Beck <ian@onecrayon.com>"]
packages =[
    { include = "api" }
]

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = "^0.112.1"
gunicorn = "^23.0.0"
sqlalchemy = "~1.3.23"
alembic = "^1.4.2"
psycopg2 = "^2.8.5"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-multipart = "^0.0.9"
email-validator = "^2.2.0"
sendgrid = "^6.4.6"
# Install uvicorn with the pieces from uvicorn[standard] that we will actually use
uvicorn = "^0.30.6"
uvloop = "^0.20.0"
httptools = "^0.6.1"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
# These are used by the test suite
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
sqlalchemy-utils = "^0.41.1"
freezegun = "^1.1.0"
httpx = "^0.27.0"
# These are used by `make format`
black = "^24.8.0"
isort = "^5.4.2"

[tool.poetry.group.vscode.dependencies]
# These are used by VSCode
pylint = "^3.2.6"
rope = "^1.2.0"

[tool.isort]
profile = "black"
multi_line_output = 3
